added current condition adaptive feature
Added a toggle switch and the ability to only enable when snowing in users geolocation.

--- a/snoverlayprefs/Resources/defaults.plist
+++ b/snoverlayprefs/Resources/defaults.plist
@@ -8,6 +8,8 @@
 	<true/>
 	<key>snowFlakeType</key>
 	<false/>
+	<key>adaptsToCurrentCondition</key>
+	<false/>
 	<key>changeWithOrientation</key>
 	<false/>
 	<key>numSnowflakes</key>
