--- a/snoverlayprefs/Resources/Root.plist
+++ b/snoverlayprefs/Resources/Root.plist
@@ -82,6 +82,20 @@
 		</dict>
 		<dict>
 			<key>cell</key>
+			<string>PSSwitchCell</string>
+			<key>default</key>
+			<true/>
+			<key>defaults</key>
+			<string>com.ryannair05.snoverlay</string>
+			<key>PostNotification</key>
+			<string>com.ryannair05.snoverlay/prefsupdated</string>
+			<key>key</key>
+			<string>adaptsToCurrentCondition</string>
+			<key>label</key>
+			<string>adapt enabled to current weather condition</string>
+		</dict>
+		<dict>
+			<key>cell</key>
 			<string>PSGroupCell</string>
 			<key>label</key>
 			<string>Snowflake Style</string>
